--- a/admin/assets/ivs-styles.css
+++ b/admin/assets/ivs-styles.css
@@ -138,7 +138,8 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
 #registreer-meeloopdag,
 #registreer-meeloop-student,
 #bevestig-actie,
-#toevoegen-meeloopdag {
+#toevoegen-meeloopdag,
+#bewerken-opleidingsnaam {
     margin-left: auto;
     padding: 1rem 2.5rem !important;
     font: normal normal 900 14px/20px 'Futura PT';
@@ -246,6 +247,7 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     text-decoration: none;
 }
 .toegevoegd-message,
+.bewerkt-message,
 .verwijderd-message,
 .verzonden-message {
     padding: 1rem;
@@ -303,9 +305,9 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     width: 100%;
 }
 
-.admin-meeloop-table th:first-child, 
-.admin-meeloop-table td:first-child {
-    padding-left: 1.5rem;
+.admin-meeloop-table th:first-child {
+    padding-right: 6rem;
+    padding-left: 2rem;
 }
 
 .admin-meeloop-table th:last-child,
@@ -317,12 +319,19 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     height: 60px;
 }
 
-.admin-meeloop-table td:first-child {
-    padding-right: 2rem;
-}
-
 .admin-meeloop-table td:last-child {
     padding: 0 1rem;
+}
+
+.td-no-edit-input {
+    padding-left: 2rem;
+}
+
+.input-edit-education {
+    height: 54px;
+    width: 100%;
+    border-radius: 0 !important;
+    padding-left: 2rem !important;
 }
 
 @media only screen and (min-width: 468px) {   
