--- a/admin/assets/ivs-styles.css
+++ b/admin/assets/ivs-styles.css
@@ -42,10 +42,10 @@
 }
 
 :root {
-    --ivs-geel: rgb(253, 208, 42);
+    --ivs-geel: #fdd02a;
     --lightgrey: #F0F2F3;
     --grey: #707070;
-    --darkgrey: rgb(74, 74, 74);
+    --darkgrey: #4a4a4a;
     --blue: #6FCCDD;
 }
 
@@ -68,22 +68,12 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     color: #fff!important;
 }
 
-.grid-3-5 {
-    border: 1px solid red;
-}
-
 @media (min-width: 1028px) {
     .grid-container {
         display: grid;
         grid-template-columns: 40% 1fr;
         grid-column-gap: 10px;
     }
-
-    .grid-2-5,
-    .grid-3-5 {
-        border: 1px solid green;
-    }
-
 }
 
 .meeloop-portaal-h1 {
@@ -103,7 +93,8 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
 }
 
 #formulier-toevoegen-rooster {
-    padding: 2rem 1rem;
+    padding: 2rem;
+    max-width: 330px;
     background: #e3e6e8;
 }
 
@@ -129,7 +120,7 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
 #label-meeloopdag-meeloop-student,
 #label-selecteer-meeloopdag,
 #label-input-taaknaam,
-#label-input-startijd,
+#label-input-starttijd,
 #label-input-eindtijd {
     display: block;
     color: var(--darkgrey);
@@ -163,8 +154,10 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
 #input-starttijd,
 #input-eindtijd {
     margin-bottom: 1rem;
+    height: 42px;
     width: 100%;
     border: 1px solid var(--grey) !important;
+    border-radius: 0;
 }
 
 .ivs-button,
@@ -340,15 +333,56 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     font-family: 'Futura PT Heavy';
 }
 
+.ivs-table-th,
 .subheading-2-admin {
     font-family: 'Futura PT Bold';
+}
+
+.subheading-2-admin {
     font-size: 20px;
 }
 
-.paragraph-main {
+.accordion-title {
+    border: none !important; /* Override jQuery CSS */
+    color: var(--darkgrey);
+    background: var(--ivs-geel) !important; /* Override jQuery CSS */
+}
+
+.accordion-title.ui-state-active {
+    color:  var(--darkgrey) !important; /* Override jQuery CSS */
+}
+
+.ui-accordion-header-icon {
+    background-position: initial !important; /* Override jQuery CSS */
+}
+
+.ui-icon-triangle-1-e {
+    background-image: url(icons/carret-right-icon.svg) !important; /* Override jQuery CSS */
+}
+
+.ui-icon-triangle-1-s {
+    background-image: url(icons/caret-down-icon.svg) !important; /* Override jQuery CSS */
+}
+
+.paragraph-main,
+.accordion-title,
+.ivs-table-td {
     font-family: 'Futura PT Book';
-    font-size: 15px;
+    font-size: 15px !important; /* Override jQuery CSS */
     white-space: pre-line;
+}
+
+.ivs-table {
+    border-collapse: collapse;
+}
+
+.ivs-table-td:first-child {
+    min-width: 200px;
+} 
+
+.ivs-table-th, .ivs-table-td {
+    border: 1px solid var(--grey);
+    padding: 1rem;
 }
 
 .table-header {
