--- a/admin/assets/ivs-styles.css
+++ b/admin/assets/ivs-styles.css
@@ -94,6 +94,8 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
 
 #formulier-toevoegen-rooster {
     padding: 2rem;
+    position: relative;
+    z-index: 1;
     max-width: 330px;
     background: #e3e6e8;
 }
@@ -158,6 +160,17 @@ a.wp-menu-open.toplevel_page_admin-overzicht-ivs-meeloop-portaal.menu-top-last .
     width: 100%;
     border: 1px solid var(--grey) !important;
     border-radius: 0;
+}
+
+#input-eindtijd:invalid + .validity:after {
+    position: absolute;
+    content: "Selecteer een tijd na je starttijd.";
+    padding-left: 5px;
+}
+
+#input-eindtijd:invalid + span + .ivs-button {
+    pointer-events: none;
+    background: grey !important;
 }
 
 .ivs-button,
